# py-wbwdi

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: codecov.yml  python-package.yml
tests/: test_config.py  test_perform_request.py  test_wdi_get.py  test_wdi_get_entities.py  test_wdi_get_geographies.py  test_wdi_get_income_levels.py  test_wdi_get_indicators.py  test_wdi_get_languages.py  test_wdi_get_lending_types.py  test_wdi_get_regions  test_wdi_get_regions.py  test_wdi_get_sources.py  test_wdi_get_topics.py  test_wdi_search.py
wbwdi/: __init__.py  _perform_request.py  config.py  perform_request.py  utils.py  wdi_get.py  wdi_get_entities.py  wdi_get_geographies.py  wdi_get_income_levels.py  wdi_get_indicators.py  wdi_get_languages.py  wdi_get_lending_types.py  wdi_get_regions  wdi_get_regions.py  wdi_get_sources.py  wdi_get_topics.py  wdi_search.py
