[tool.poetry]
name = "wbwdi"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Christoph Scheuch <christoph@tidy-intelligence.com>"]
readme = "README.md"
repository = "https://github.com/tidy-intelligence/py-wbwdi"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.0.0"
httpx = "^0.27.2"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
