[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wbwdi"
authors = [{name = "Christoph Scheuch", email = "christoph@tidy-intelligence.com"}]
version = "1.0.0"
description = "Seamless Access to World Bank World Development Indicators with Polars"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.0.0",
]

[project.optional-dependencies]
pandas = [
  "pandas",
  "pyarrow"
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
    "pytest-cov>=6.0.0"
]

[project.urls]
Repository = "https://github.com/tidy-intelligence/py-wbwdi"
Issues = "https://github.com/tidy-intelligence/py-wbwdi/issues"
Changelog = "https://github.com/tidy-intelligence/py-wbwdi/blob/master/CHANGELOG.md"